first part of slide show

--- a/demoday/index.html
+++ b/demoday/index.html
@@ -59,20 +59,26 @@
     </td></tr></table>
 </div>
 
-<div class="slide" id="college-is-fun">
-	<h2>College is:</h2>
+<div class="slide" id="college">
+    <div id="college-imgs">
+        <img alt="" class="" src="assets/college.jpg"/ id="belushi">
+        <img alt="" class="" src="assets/college-hall.jpg" id="college-hall"/>
+        <img alt="" class="" src="assets/college-party.jpg" id="college-party"/>
+        <img alt="" class="" src="assets/college-green.jpg" id="college-green"/>
+    </div>
 </div>
 
 <div class="slide" id="college-is-procrastination">
-	<h2>but it's also:</h2>
+	<h2>and in between...</h2>
+    <img alt="" style="display:none;" class="titled" src="assets/procrastinator.png" id="procrastinator"/>
 </div>
 
-<div class="slide" id="conveyer-belt">
-	<h2>(conveyer belt)</h2>
-</div>
-
-<div class="slide" id="snack-machine">
-	<h2>(snack machine)</h2>
+<div class="slide" id="conversion">
+    <div>
+	    <img alt="" class="no-title" src="assets/books.png" id="books"/>
+	    <img alt="" style="display:none;" class="no-title" src="assets/cookies.png" id="cookies"/>
+	    <img alt="" class="no-title" src="assets/ray.png" id="ray"/>
+    </div>
 </div>
 
 <div class="slide" id="demo">
@@ -80,6 +86,11 @@
         <div class="iphone-screen-container-container">
             <div class="iphone-screen-container">
                 <img alt="" src="assets/screens.png" class="iphone-screen" id="iphone_screen"/>
+            </div>
+        </div>
+        <div class="iphone-control-container-container">
+            <div class="iphone-control-container">
+                <img alt="" src="assets/controls.png" class="iphone-control" id="iphone_control"/>
             </div>
         </div>
         <img alt="" src="assets/iphone-frame.png"/>
@@ -91,11 +102,20 @@
 </div>
 
 <div class="slide" id="biz-model">
-	<h2>(biz model)</h2>
+    <img alt="" class="no-title" src="assets/vendo.png" id="vendo"/>
+    <img alt="" class="no-title" src="assets/vendo2.png" id="vendo2"/>
+    <img alt="" class="no-title" src="assets/feet.png" id="feet"/>
+    <img alt="" class="no-title" src="assets/snack-machine-looker.png" id="looker"/>
+</div>
+
+<div class="slide" id="ask">
+	<h2>Series Seed</h2>
+	<h1>$150,000</h1>
 </div>
 
 <div class="slide" id="victory">
-	<h2>(victory shot)</h2>
+	<h2>Be brilliant.</h2>
+    <img alt="" class="titled" src="assets/winner.png"/>
 </div>
 
 <!--<div class="slide" id="markup">-->
