--- a/demoday/index.html
+++ b/demoday/index.html
@@ -105,7 +105,11 @@
     <img alt="" class="no-title" src="assets/vendo.png" id="vendo"/>
     <img alt="" class="no-title" src="assets/vendo2.png" id="vendo2"/>
     <img alt="" class="no-title" src="assets/feet.png" id="feet"/>
-    <img alt="" class="no-title" src="assets/snack-machine-looker.png" id="looker"/>
+    <img alt="" style="display:none;" class="no-title" src="assets/snack-machine-looker.png" id="looker"/>
+</div>
+
+<div class="slide" id="roll-out">
+	<h2>(URI/Brandeis logos)</h2>
 </div>
 
 <div class="slide" id="ask">
